<?xml version="1.0"?>
<package format="2">
  <name>pf_board</name>
  <version>0.1.0</version>
  <description>A template for ROS packages.</description>
  <maintainer email="joseph.lys@gmail.com">Joseph Lee Yuan Sheng</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/joseph-lys/pf_robot_ros</url>
  <url type="bugtracker">https://github.com/joseph-lys/pf_robot_ros/issues</url>
  <author email="joseph.lys@gmail.com">Joseph Lee Yuan Sheng</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>eigen</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>pf_msgs</depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>combined_robot_hw</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>roslint</build_depend>
</package>
