<?xml version="1.0"?>
<package format="2">
  <name>ros_interface_gui</name>
  <version>0.1.0</version>
  <description>A template for ROS packages.</description>
  <maintainer email="joseph.lys@gmail.com">Joseph Lee Yuan Sheng</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/joseph-lys/pf_robot_ros</url>
  <url type="bugtracker">https://github.com/joseph-lys/pf_robot_ros/issues</url>
  <author email="joseph.lys@gmail.com">Joseph Lee Yuan Sheng</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>eigen</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>
